# bbggez

./: Cargo.toml  README.md  pull_request_template.md  run-examples.sh
examples/: create_circle.rs  create_rectangle.rs  create_square.rs  create_triangle.rs  nature_of_code_traits.rs  random_bright_color.rs  random_dark_color.rs  random_location.rs  runtime.rs  runtime_dimensions.rs
src/: color.rs  lib.rs  mesh.rs  run.rs  timer.rs  traits.rs  utils.rs
src/tests/: color.rs  mod.rs  utils.rs
