[package]
name = "bbggez"
version = "0.1.0"
authors = ["Brooks Patton"]
edition = "2018"
description = "Utility functions by the Brooks Builds community for the Rust game engine GGEZ"
repository = "https://github.com/brooks-builds/bbggez"
readme = "README.md"
keywords = ["Brooks_Builds", "GGEZ", "Utility"]
categories = ["game-engines"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = "^0.5.0"
rand = "^0.7.0"